[package]
name = "cargo-aoc"
version = "0.1.0"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>", "Olivier Pinon <oliv.pinon@gmail.com>"]
description = "Cargo Advent of Code Helper"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/cargo-aoc"
readme = "README.md"

[dependencies]
dotenv = "0.13.0"
aoc-runner-internal = "0.1.0"
toml = "0.4.9"
clap = "2.32.0"
chrono = "0.4.6"
reqwest = "0.9.5"

