[package]
name = "aoc-runner-derive"
version = "0.3.0"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>"]
description = "Codegen for aoc-runner & others"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/aoc-runner-derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.5", features = ["extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.5"
aoc-runner-internal = { path = "../aoc-runner-internal" }

[features]
default = ["syn/full"]
