[package]
name = "aoc-runner-derive"
version = "0.3.0"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>"]
description = "Codegen for aoc-runner & others"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/aoc-runner-derive"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.39", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.69"
#aoc-runner-internal = { path = "../aoc-runner-internal" }
aoc-runner-internal = "0.1.0"

[features]
default = ["syn/full"]
