[package]
name = "aoc-runner-internal"
version = "0.1.0"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>"]
description = "Internal machinery for aoc-runner & others"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/aoc-runner-internal"
edition = "2018"

[dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.41"