[package]
name = "cargo-aoc"
version = "0.3.3"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>", "Olivier Pinon <oliv.pinon@gmail.com>"]
description = "Cargo Advent of Code Helper"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/cargo-aoc"
readme = "../README.md"
include = ["Cargo.toml", "src/**/*", "template/**/*.tpl", "../README.md"]

[dependencies]
#aoc-runner-internal = { path = "../aoc-runner-internal" }
aoc-runner-internal = "0.1.0"
toml = "0.5.9"
clap = "2.34.0"
chrono = "0.4.23"
chrono-tz = "0.8.1"
reqwest = { version = "0.11.13", features = ["blocking"] }
webbrowser = "0.8.2"
directories = "4.0.1"
