[package]
name = "cargo-aoc"
version = "0.3.7"
authors = ["Grégory Obanos <gregory.obanos@gmail.com>", "Olivier Pinon <oliv.pinon@gmail.com>"]
description = "Cargo Advent of Code Helper"
license = "MIT/Apache-2.0"
repository = "https://github.com/gobanos/cargo-aoc"
readme = "../README.md"
include = ["Cargo.toml", "src/**/*", "template/**/*.tpl", "../README.md"]
edition = "2021"


[dependencies]
#aoc-runner-internal = { path = "../aoc-runner-internal" }
aoc-runner-internal = "0.1.0"
toml = "0.8.8"
chrono = "0.4.31"
chrono-tz = "0.8.4"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "rustls-tls"] }
webbrowser = "0.8.12"
directories = "5.0.1"
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt"] }
